-
Bug
-
Resolution: Done
-
Not Evaluated
-
6.2
-
None
-
bb14fbbd702241dcf75f4f81c1eb33fab2611070 (qt/qtquick3d/dev) deccf26171843ec323efb5266f42742cc1dfe4d1 (qt/qtquick3d/6.2)
The shadowmap bounds that are calculated from the frustum of the camera are incorrect, causing visual artifacts.
| For Gerrit Dashboard: QTBUG-95616 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 363523,3 | Fix frustum shadow map bounds | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 364699,2 | Fix frustum shadow map bounds | 6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |