Fix frustum shadow map bounds

Now the frustum is computed by using the inverted view frustum.

Fixes: QTBUG-95616
Change-Id: Ia4df9364cedf4815f9c38080b39c4375c9e1fcbf
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>